[package]
name = "pixelflut"
version = "0.2.0-alpha.2"
authors = ["Raphael Peters <raphael.r.peters@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"
description = """
An library for encoding and decoding pixelflut messages providing a
simple sync and async protocol interface using tokio.
"""
homepage = "https://github.com/rappet/rust-pixelflut"
repository = "https://github.com/rappet/rust-pixelflut"
keywords = ["pixelflut"]

[features]
default = ["tokio-rt"]
sync = ["bufstream"]
tokio-rt = ["tokio"]

[[example]]
name = "sync_client"
required-features = ["sync", "anyhow", "clap"]

[[example]]
name = "sync_image"
required-features = ["sync", "anyhow", "image", "clap"]

[[example]]
name = "sync_server"
required-features = ["sync", "anyhow", "clap"]

[[example]]
name = "async_server"
required-features = ["tokio-rt", "anyhow", "clap"]

[[example]]
name = "async_client"
required-features = ["tokio-rt", "anyhow", "clap"]

[dependencies.bufstream]
version = "0.1.4"
optional = true

[dependencies.bstr]
version = "0.2.15"

[dependencies.bytes]
version = "1"

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.image]
version = "0.23"
optional = true

[dependencies.memchr]
version = "2.3"

[dependencies.anyhow]
version = "1.0"
optional = true

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["derive"]
optional = true

[dependencies.lazy_static]
version = "1.4.0"
