[package]
name = "pixelflut"
version = "0.2.1-alpha.0"
authors = ["Raphael Peters <raphael.r.peters@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"
description = """
An async/sync Pixelflut server/client library
"""
homepage = "https://github.com/rappet/rust-pixelflut"
repository = "https://github.com/rappet/rust-pixelflut"
keywords = ["pixelflut"]
categories = ["graphics", "network-programming"]

[features]
all = ["tokio-rt", "sync"]
default = ["tokio-rt", "sync"]
sync = ["bufstream"]
tokio-rt = ["tokio"]

[[example]]
name = "sync_client"
required-features = ["sync", "anyhow", "clap"]

[[example]]
name = "sync_image"
required-features = ["sync", "anyhow", "image", "clap"]

[[example]]
name = "sync_server"
required-features = ["sync", "anyhow", "clap"]

[[example]]
name = "async_server"
required-features = ["tokio-rt", "anyhow", "clap"]

[[example]]
name = "async_client"
required-features = ["tokio-rt", "anyhow", "clap"]

[dependencies]
atoi = "1.0.0"
bufstream = { version = "0.1.4", optional = true }
bstr = "0.2.17"
bytes = "1.1.0"
tokio = { version = "1.18.1", features = ["full"], optional = true }
image = { version = "0.24.2", optional = true }
memchr = "2.5"
anyhow = { version = "1.0.54", optional = true }
lazy_static = "1.4.0"
clap = { version = "3.1.17", features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
proptest = "1.0.0"
